# notify-empty-decks

./: .gitignore  DESIGN.md  Makefile  README.md  __init__.py  config.example.json  config.json  manifest.json  pyproject.toml
scripts/: build_ankiaddon.sh
