[project]
name = "notify-empty-decks"
version = "0.1.0"
description = "Legacy Anki add-on for deck exhaustion notifications."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.6.0",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.uv.pip]
exclude-newer = "7 days"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
